# firefox-menu

./: README.md  pyproject.toml
src/firefox_menu/: firefox_menu.py  main.py  userChrome.css
