[project]
name = "firefox-menu"
version = "0.1.0"
description = "Configure Firefox context menu entries"
license = "MIT"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["polykit (>=0.14.0,<0.15.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
mypy = "^1.17.1"

[project.scripts]
firefox-menu = "firefox_menu.firefox_menu:main"
